MODSOURCE-914: Update marc4j for 2.9.6 version (#699)
* MODSOURCE-914: Update marc4j for 2.9.6 version